# halo2-hs

./: README.md  cabal.project
.github/workflows/: ci.yml
halo2-hs/: halo2-hs.cabal
halo2-hs/demo/: Main.hs
halo2-hs/src/C/: GettingStarted.chs
halo2-hs/src/Halo2Hs/: Fp.hs
halo2-hs/src/Halo2Hs/C/: Fp.chs
halo2-hs/test/: Fp.hs  Main.hs
halo2-rs/: Cargo.toml  cbindgen.toml
halo2-rs/src/: lib.rs
