[package]
name = "halo2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs   = "0.3.0"

haskell-ffi.git = "https://github.com/BeFunctional/haskell-rust-ffi.git"
haskell-ffi.rev = "2bf292e2e56eac8e9fb0fb2e1450cf4a4bd01274"

[features]
capi = []

[package.metadata.capi.library]
versioning = false
